Fix Render start command for Flask

--- a/render.yaml
+++ b/render.yaml
@@ -3,8 +3,6 @@ services:
     name: art-haven
     env: python
     plan: free
-    buildCommand: pip install -r requirements.txt
+    buildCommand: |
+      pip install -r requirements.txt
     startCommand: gunicorn app:app
-    envVars:
-      - key: PYTHON_VERSION
-        value: 3.10.0
